--- a/app/views/studies/_initialize_labels_form.html.erb
+++ b/app/views/studies/_initialize_labels_form.html.erb
@@ -82,7 +82,7 @@
 				add: function (e, data) {
 					  fileUploading = true;
 					  var that = this;
-					  var fileName = data.files[0].name.replace(/ /g, '_');
+					  var fileName = data.files[0].name.replace(FILENAME_SANITIZER, '_');
             $('#labels_form_<%= study_file._id %> .filename').val(fileName);
             canUpload = validateCandidateUpload("#labels_form_<%= study_file._id %>", fileName, $('.initialize_labels_form .filename'));
             if ( canUpload ) {
@@ -106,7 +106,7 @@
 				},
 				done: function(e, data) {
           completeWizardStep('initialize_labels_form_nav');
-					var fileName = data.files[0].name.replace(/ /g, '_');
+					var fileName = data.files[0].name.replace(FILENAME_SANITIZER, '_');
 					// update upload status
 					$.ajax({
 						  url: "<%= update_status_study_path %>",
