--- a/app/views/studies/_initialize_primary_data_form.html.erb
+++ b/app/views/studies/_initialize_primary_data_form.html.erb
@@ -149,7 +149,7 @@
 				add: function (e, data) {
 					  fileUploading = true;
 					  var that = this;
-					  var fileName = data.files[0].name.replace(/ /g, '_');
+					  var fileName = data.files[0].name.replace(FILENAME_SANITIZER, '_');
             $('#primary_data_form_<%= study_file._id %> .filename').val(fileName);
             canUpload = validateCandidateUpload("#primary_data_form_<%= study_file._id %>", fileName, $('.initialize_primary_data_form .filename'));
             if ( canUpload ) {
@@ -176,7 +176,7 @@
           }
 				},
 				done: function(e, data) {
-					var fileName = data.files[0].name.replace(/ /g, '_');
+					var fileName = data.files[0].name.replace(FILENAME_SANITIZER, '_');
 					$.ajax({
 						  url: "<%= update_status_study_path %>",
 						  type: "PATCH",
