--- a/app/javascript/styles/_search.scss
+++ b/app/javascript/styles/_search.scss
@@ -335,3 +335,8 @@ nav.search-links, #search-panel {
   font-weight: bold;
   color: #fff;
 }
+
+.download-table-container {
+	height: 70vh;
+	margin: 2em 0em 1em 0em;
+}
