--- a/app/views/studies/_initialize_metadata_form.html.erb
+++ b/app/views/studies/_initialize_metadata_form.html.erb
@@ -150,18 +150,23 @@
 				add: function (e, data) {
 					fileUploading = true;
 					var that = this;
-					var fileName = data.files[0].name.replace(FILENAME_SANITIZER, '_');
-					$('#metadata_form .filename').val(fileName);
-					$.getJSON("<%= resume_upload_study_path %>", { file: fileName }, function (result) {
-						var file = result.file;
-            if (file == null) {
-                fileUploading = false;
-                $("#study-files-notice-target").html("<%= escape_javascript( render partial: 'studies/study_file_notices', locals: {message: "You have already uploaded this file.  Please select another file."}) %>");
-            } else {
-              data.uploadedBytes = file && file.size;
-              $.blueimp.fileupload.prototype.options.add.call(that, e, data);
-            }
-					});
+          const file = data.files[0]
+
+          // Run client-side metadata file validation
+          window.SCP.validateFile(file, 'metadata')
+
+					// var fileName = file.name.replace(FILENAME_SANITIZER, '_');
+					// $('#metadata_form .filename').val(fileName);
+					// $.getJSON("<%= resume_upload_study_path %>", { file: fileName }, function (result) {
+					// 	var file = result.file;
+          //   if (file == null) {
+          //       fileUploading = false;
+          //       $("#study-files-notice-target").html("<%= escape_javascript( render partial: 'studies/study_file_notices', locals: {message: "You have already uploaded this file.  Please select another file."}) %>");
+          //   } else {
+          //     data.uploadedBytes = file && file.size;
+          //     $.blueimp.fileupload.prototype.options.add.call(that, e, data);
+          //   }
+					// });
 				},
 				chunkdone: function(e, data) {
 					var perc = parseInt(data.loaded / data.total * 100, 10);
