Update name for badge and use margin-right for badge spacing

--- a/app/javascript/styles/_resultsPanel.scss
+++ b/app/javascript/styles/_resultsPanel.scss
@@ -85,10 +85,11 @@
   .cell-count {
     background-color: #74ae43;
     font-weight: normal;
+    margin-right: 0.5em
   }
   .facet-match, .gene-match {
     background-color: #fff;
-    margin-left: 0.5em;
+    margin-right: 0.5em;
     color: #74ae43;
     border: 1px solid #74ae43;
     font-weight: normal;
