--- a/app/views/studies/_metadata_file_fields.html.erb
+++ b/app/views/studies/_metadata_file_fields.html.erb
@@ -1,6 +1,46 @@
 <div class="form-group row">
   <div class="col-sm-4">
-    <%= f.label :use_metadata_convention, "Use Metadata Convention?" %> <%= render partial: 'metadata_convention_help_popover', locals: {id: f.object.id.to_s} %><br />
-    <%= f.select :use_metadata_convention, options_for_select([['Yes', true],['No', false]], f.object.use_metadata_convention), {}, class: 'form-control use-metadata-convention', disabled: !f.object.new_record? %>
+    <% convention_required = User.feature_flag_for_instance(current_user, 'convention_required') %>
+    <%= f.label :use_metadata_convention do %>
+      Do you use SCP conventional names for required metadata column headers?
+      <%= render partial: 'metadata_convention_help_popover', locals: {id: f.object.id.to_s} %>
+    <% end %>
+    <br />
+    <%= f.label :use_metadata_convention_true, 'data-analytics-name': 'metadata-convention-optin' do %>
+      <%= f.radio_button :use_metadata_convention, true, checked: true, disabled: !f.object.new_record?%>
+      Yes
+    <% end %>
+    &nbsp;
+    <%= f.label :use_metadata_convention_false, 'data-analytics-name': 'metadata-convention-optout' do %>
+      <% if convention_required %>
+        <a href="#/" style="color:#999" id="convention-decline-label-<%= f.object.id.to_s %>"
+           data-content="Using the convention is now required.  If this presents a particular issue for your study, please contact us at <a href='mailto:scp-support@broadinstitute.zendesk.com'>scp-support@broadinstitute.zendesk.com</a> so we can help or make any updates to the convention."
+           data-toggle="popover"
+           data-analytics-name="convention-decline-label">
+          <%= f.radio_button :use_metadata_convention, false, checked: false, disabled: true %>
+          No
+        </a>
+
+      <% else %>
+        <%= f.radio_button :use_metadata_convention, false, checked: false, disabled: !f.object.new_record? %>
+        No
+      <% end %>
+    <% end %>
+    &nbsp; &nbsp; <a href="#/" id="convention-decline-helplink-<%= f.object.id.to_s %>"
+                     data-toggle="popover"
+                     data-content="Please contact us at <a href='mailto:scp-support@broadinstitute.zendesk.com'>scp-support@broadinstitute.zendesk.com</a> so we can help or make any needed updates to the convention."
+                     data-analytics-name="convention-decline-helplink">
+    Using conventional names is an issue for my study
+  </a>
+    <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
+      ['#convention-decline-label-', '#convention-decline-helplink-'].forEach(function(idString) {
+        var popoverTarget = idString + '<%= f.object.id.to_s %>'
+        $(popoverTarget).on('click', function() {
+          window.SCP.log('file-upload:metadata:optout-attempt', {studyAccession: '<%= @study.accession %>'})
+        })
+        enableHoverPopovers(popoverTarget);
+      })
+    </script>
+    <div id="use-metadata-convention-message"></div>
   </div>
 </div>
