--- a/app/views/studies/_initialize_expression_form.html.erb
+++ b/app/views/studies/_initialize_expression_form.html.erb
@@ -32,7 +32,14 @@
     </div>
   </div>
   <div class="form-group">
-    <%= f.fields_for :expression_file_info %>
+    <%= f.fields_for :expression_file_info do |expr_file_info|
+      render partial: 'expression_file_info_fields',
+                     locals: {
+                       disable_processed: allow_only == 'raw',
+                       disable_raw_counts: allow_only == 'processed',
+                       f: expr_file_info
+                     }
+      end %>
   </div>
 	<div class="form-group row">
 		<div class="col-sm-4">
