--- a/app/javascript/styles/_brand.scss
+++ b/app/javascript/styles/_brand.scss
@@ -85,6 +85,10 @@
   border-left: 0.5px solid #FFFFFF;
 }
 
+.left-border-0-5-gray {
+  border-left: 0.5px solid #ddd;
+}
+
 .counts-text {
   font-size: 24px;
 }
