--- a/app/views/site/reviewer_access.html.erb
+++ b/app/views/site/reviewer_access.html.erb
@@ -5,21 +5,25 @@
     <p class="lead">
       Use this page to access the above study as a reviewer.  With reviewer access, you may interact with all enabled study
       visualizations, but you will not have permission to download any data files until the study has been made public, and
-      any data embargoes have been lifted.
+      any embargoes have been lifted.
     </p>
     <p class="lead">
       Once granted, you will be redirected to the above study via an authenticated link that will expire
-      <%= ReviewerAccessSession.session_duration_label %> after being issued.  To access this study again, you may return to
-      this page and re-enter the pin to create a new link.
+      <strong><%= ReviewerAccessSession.session_duration_label %></strong> after being issued.  To access this study
+      again after that, please return to this page and re-enter the pin.
     </p>
   </div>
 </div>
 
 <%= form_for(:reviewer_access, url: validate_reviewer_access_path(params[:access_code])) do |f| %>
   <div class="form-group row">
-    <div class="col-md-offset-5 col-md-2 text-center">
-      <%= f.label :pin, 'Pin Code' %><br />
-      <%= f.password_field :pin, maxlength: 6, class: 'form-control' %>
+    <div class="col-md-offset-5 col-md-2">
+      <div class="row">
+        <div class="col-xs-offset-3 col-xs-6 text-center">
+          <%= f.label :pin, 'Pin' %><br />
+          <%= f.password_field :pin, maxlength: 6, class: 'form-control text-center' %>
+        </div>
+      </div>
     </div>
   </div>
   <div class="form-group row">
