--- a/app/views/admin_configurations/edit_user.html.erb
+++ b/app/views/admin_configurations/edit_user.html.erb
@@ -28,29 +28,31 @@
     </div>
   </div>
   <div class="form-group row">
-    <div class="row">
+    <div class="col-md-12">
+      <label>Feature flags</label>
+    </div>
+    <div class="form-group row">
       <div class="col-md-12">
-        <label>Feature flags</label>
+        <% @user.feature_flags_with_defaults.sort_by { |key, _| key }.each do |key, _| %>
+          <% @default_flag =  FeatureFlag.find_by(name: key) %>
+          <div class="row <%= @user.feature_flags.key?(key) ? 'highlight' : '' %>">
+            <div class="col-md-3 text-right">
+              <label><%= key %>:</label>
+            </div>
+            <div class="col-md-2">
+              <select name="feature_flag_<%= key %>" class="form-control">
+                <option value="0" <%= @user.feature_flags[key] == false ? 'selected' : '' %>>False</option>
+                <option value="1" <%= @user.feature_flags[key] == true ? 'selected' : '' %>>True</option>
+                <option value="-" <%= @user.feature_flags.key?(key) ? '' : 'selected' %>>Default (<%= @default_flag.default_value %>)</option>
+              </select>
+            </div>
+            <div class="col-md-6">
+              <%= @default_flag.description %>
+            </div>
+          </div>
+        <% end %>
       </div>
     </div>
-    <% @user.feature_flags_with_defaults.each do |key, value| %>
-      <% @default_flag =  FeatureFlag.find_by(name: key) %>
-      <div class="row <%= @user.feature_flags.key?(key) ? 'highlight' : '' %>">
-        <div class="col-md-3 text-right">
-          <label><%= key %>:</label>
-        </div>
-        <div class="col-md-2">
-          <select name="feature_flag_<%= key %>">
-            <option value="0" <%= @user.feature_flags[key] == false ? 'selected' : '' %>>False</option>
-            <option value="1" <%= @user.feature_flags[key] == true ? 'selected' : '' %>>True</option>
-            <option value="-" <%= @user.feature_flags.key?(key) ? '' : 'selected' %>>Default (<%= @default_flag.default_value %>)</option>
-          </select>
-        </div>
-        <div class="col-md-6">
-          <%= @default_flag.description %>
-        </div>
-      </div>
-     <% end %>
   </div>
   <div class="form-group row">
     <div class="col-md-12">
