--- a/app/views/studies/_initialize_expression_form.html.erb
+++ b/app/views/studies/_initialize_expression_form.html.erb
@@ -68,7 +68,7 @@
           <% if study_file.parsing? || study_file.upload_file_name.nil? %>
             <%= link_to 'Delete', '#/', class: 'btn btn-block btn-danger disabled-delete', disabled: 'disabled', title: 'You must wait until the file has finished uploading & parsing before deleting', data: {toggle: 'tooltip'} %>
           <% else %>
-            <%= link_to 'Delete', delete_study_file_study_path(@study._id, study_file._id, target: "#expression_form_#{study_file._id}"), method: :delete, class: 'btn btn-block btn-danger delete-file', data: {remote: true} %>
+            <%= link_to 'Delete', delete_study_file_study_path(@study._id, study_file._id, target: "#expression_form_#{study_file._id}", allow_only: allow_only || 'all'), method: :delete, class: 'btn btn-block btn-danger delete-file', data: {remote: true} %>
           <% end %>
 				</div>
 			</div>
@@ -90,16 +90,15 @@
 
 	<script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
 
-      var expFormId = "#expression_form_<%= study_file._id %>";
-      $(expFormId).find('.file-type').on('change', function() {
-        if ( $(expFormId + ' #study_file_file_type_expression_matrix').prop("checked") ) {
-          $(expFormId).find('.initialize-bundle-target').empty();
+      var expFormId_<%= allow_only %> = "#expression_form_<%= study_file._id %>";
+      $(expFormId_<%= allow_only %>).find('.file-type').on('change', function() {
+        if ( $(expFormId_<%= allow_only %> + ' #study_file_file_type_expression_matrix').prop("checked") ) {
+          $(expFormId_<%= allow_only %>).find('.initialize-bundle-target').empty();
         }
       });
 
 		$(function() {
-
-        $(expFormId).fileupload({
+      $(expFormId_<%= allow_only %>).fileupload({
 				url: "<%= upload_study_path(@study._id) %>",
 				maxChunkSize: 10000000,
 				type: 'PATCH',
@@ -111,10 +110,10 @@
 					// auto-select MM Coordinate Matrix if applicable
           fileExt = fileName.split('.').slice(-1)[0];
           if (fileExt === 'mtx') {
-              $(expFormId + ' #study_file_file_type_mm_coordinate_matrix').prop("checked", true);
+              $(expFormId_<%= allow_only %> + ' #study_file_file_type_mm_coordinate_matrix').prop("checked", true);
           }
-          $(expFormId + ' .filename').val(fileName);
-          var canUpload = validateCandidateUpload(expFormId, fileName, $('.initialize_expression_form .filename'));
+          $(expFormId_<%= allow_only %> + ' .filename').val(fileName);
+          var canUpload = validateCandidateUpload(expFormId_<%= allow_only %>, fileName, $('.initialize_expression_form .filename'));
           if ( canUpload ) {
               $.getJSON("<%= resume_upload_study_path %>", { file: fileName }, function (result) {
                   var file = result.file;
@@ -127,18 +126,19 @@
                   }
               });
           } else {
-              $(expFormId + ' .filename').val('');
+              $(expFormId_<%= allow_only %> + ' .filename').val('');
           }
 				},
 				chunkdone: function(e, data) {
 					var perc = parseInt(data.loaded / data.total * 100, 10);
 					$(data.context).find('h1').html(perc + "% uploaded");
-            if ( $('#<%= study_file.id %>-bundle-btns').length === 0 && $(expFormId + ' #study_file_file_type_mm_coordinate_matrix').prop("checked") ) {
-                $(expFormId).find('.initialize-bundle-target').html("<%= j(render partial: 'study_file_bundle_btns', locals: {study_file_id: study_file.id.to_s, file_type: 'MM Coordinate Matrix'}) %>")
+            if ( $('#<%= study_file.id %>-bundle-btns').length === 0 && $(expFormId_<%= allow_only %> + ' #study_file_file_type_mm_coordinate_matrix').prop("checked") ) {
+                $(expFormId_<%= allow_only %>).find('.initialize-bundle-target').html("<%= j(render partial: 'study_file_bundle_btns', locals: {study_file_id: study_file.id.to_s, file_type: 'MM Coordinate Matrix'}) %>")
             }
 				},
 				done: function(e, data) {
-          completeWizardStep('initialize_expression_form_nav');
+				  let stepName = '<%= allow_only == 'raw' ? 'initialize_raw_expression_form_nav' : 'initialize_processed_expression_form_nav' %>';
+          completeWizardStep(stepName);
 					var fileName = data.files[0].name.replace(FILENAME_SANITIZER, '_');
 					$.ajax({
 						  url: "<%= update_status_study_path %>",
@@ -154,7 +154,8 @@
                           file: fileName,
                           modal_target: '#expression-parse-modal',
                           partial: 'initialize_expression_form',
-                          selector: expFormId
+                          selector: expFormId_<%= allow_only %>,
+                          allow_only: '<%= allow_only %>'
                       },
                       dataType: 'script'
                   });
@@ -172,7 +173,9 @@
             console.log('Aborting upload on study_file: <%= study_file.id %>');
             launchModalSpinner('#delete-modal-spinner','#delete-modal', function() {
                 $.ajax({
-                    url: "<%= delete_study_file_study_path(@study._id, study_file._id, target: "#expression_form_#{study_file._id}") %>",
+                    url: "<%= delete_study_file_study_path(@study._id, study_file._id,
+                              target: "#expression_form_#{study_file._id}",
+                              allow_only: allow_only || 'all') %>",
                     type: 'DELETE',
                     dataType: 'script'
                 });
@@ -181,7 +184,7 @@
 			});
 		});
 
-      $(expFormId).on('nested:fieldAdded', function(event){
+      $(expFormId_<%= allow_only %>).on('nested:fieldAdded', function(event){
           $('#add-expression-file-info').tooltip('destroy')
           $('#add-expression-file-info').remove()
       })
