--- a/app/views/studies/_block_processed_upload_content.html.erb
+++ b/app/views/studies/_block_processed_upload_content.html.erb
@@ -1,4 +1,4 @@
-<div id="block-processed-upload-content">
+<div id="block-processed-upload-content" class="<%= @block_processed_upload ? 'show-processed-disclaimer' : 'hide-processed-disclaimer' %>">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12 text-center">
