--- a/app/views/studies/retrieve_wizard_upload.js.erb
+++ b/app/views/studies/retrieve_wizard_upload.js.erb
@@ -39,4 +39,4 @@ setTimeout(function() {
 }, 500);
 
 // show/hide overlay preventing processed uploads, if needed
-toggleExpressionOverlay(<%= @block_processed_upload %>);
+setExpressionOverlay(<%= @block_processed_upload %>);
