--- a/app/views/studies/delete_study_file.js.erb
+++ b/app/views/studies/delete_study_file.js.erb
@@ -27,7 +27,7 @@ closeModalSpinner('#delete-modal-spinner', '#delete-modal', function() {
     };
 
     // show/hide overlay preventing processed uploads, if needed
-    toggleExpressionOverlay(<%= @block_processed_upload %>);
+    setExpressionOverlay(<%= @block_processed_upload %>);
 });
 
 
