Integrate feature flag for refined correlation UI

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -222,5 +222,7 @@
         }
     });
 </script>
+
+<input type="hidden" id="feature-flags" value='<%= FeatureFlaggable.feature_flags_for_instances(@selected_branding_group, current_user).to_json %>'/>
 </body>
 </html>
