--- a/app/views/site/_reviewer_access_fields.html.erb
+++ b/app/views/site/_reviewer_access_fields.html.erb
@@ -28,15 +28,16 @@
       </div>
     </div>
     <div class="col-md-6 left-border-0-5-gray">
-      <h4>Current Access Credentials <button class="btn btn-default btn-sm btn-copy" data-toggle="tooltip" title=""
-                                             data-original-title="Copy to clipboard"><i class="far fa-copy"></i></button>
+      <h4>Current Access Credentials <a id="copy-reviewer-creds" class="btn btn-default btn-sm btn-copy"
+                                             data-toggle="tooltip" title="" data-original-title="Show pin & copy to clipboard">
+                                             <i class="far fa-copy"></i></a>
       </h4>
       <% if access_enabled %>
         <p id='access-credentials'>
           <strong>Accession:</strong> <%= @study.accession %><br />
           <strong>URL:</strong>&nbsp;<%= link_to reviewer_access_url(access_code: f.object.access_code),
                                                  reviewer_access_url(access_code: f.object.access_code) %><br />
-          <strong>Pin:</strong>&nbsp;<%= f.object.pin %>
+          <strong>Pin:</strong>&nbsp;<span id="reviewer-pin"><%= '*' * ReviewerAccess::PIN_LENGTH %></span>
         </p>
       <% else %>
         <h4 class="text-danger">DISABLED</h4>
@@ -46,15 +47,24 @@
 </div>
 
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
+
+  const accessPin = '<%= Base64.encode64(f.object.pin).strip %>';
+  const pinMask = '<%= '*' * ReviewerAccess::PIN_LENGTH %>';
+
   $('#reviewer-access-controls > .btn-toggle').click(function() {
     $(this).find('.btn').toggleClass('active');
   });
 
-  $('.btn-copy').click(function() {
+  $('#copy-reviewer-creds').on('click', function() {
+    const pinField = $('#reviewer-pin')
+    pinField.html(atob(accessPin));
     let range = document.createRange();
     range.selectNode(document.getElementById("access-credentials"));
     window.getSelection().removeAllRanges(); // clear current selection
     window.getSelection().addRange(range); // to select text
     document.execCommand("copy");
+    setTimeout(function() {
+      pinField.html(pinMask);
+    }, 5000);
   })
 </script>
