--- a/app/views/site/reviewer_access.html.erb
+++ b/app/views/site/reviewer_access.html.erb
@@ -10,7 +10,7 @@
     <p class="lead">
       Once granted, you will be redirected to the above study via an authenticated link that will expire
       <strong><%= ReviewerAccessSession.session_duration_label %></strong> after being issued.  To access this study
-      again after that, please return to this page and re-enter the pin.
+      again after that, please return to this page and re-enter the PIN.
     </p>
   </div>
 </div>
