--- a/app/views/site/_study_settings_form.html.erb
+++ b/app/views/site/_study_settings_form.html.erb
@@ -116,7 +116,7 @@
     <p class="help-block">
       Use this form to set up anonymous "reviewer" access for allowing publication reviewers to view your study while it
       is still private.  Reviewers can interact with any enabled visualizations, but cannot download data or view the
-      associated Terra workspace.  If enabled, you can send the Access URL & PIN to your corresponding editor to allow
+      associated Terra workspace.  If enabled, you can send the access URL & PIN to your corresponding editor to allow
       reviewers to view your study.
     </p>
     <%= f.fields_for :reviewer_access %>
