adding nightly report stats, and utils test methods

--- a/app/views/layouts/nightly_admin_report.html.erb
+++ b/app/views/layouts/nightly_admin_report.html.erb
@@ -7,6 +7,15 @@
         margin-right: 25px;
       }
 
+      span.detail {
+        font-style: italic;
+        color:  #888;
+      }
+
+      div.indent-block {
+        margin-left: 25px;
+      }
+
       div.clear {
         clear: both;
         margin-bottom: 15px;
