adding covid-19 to collections list

--- a/app/javascript/styles/_brand.scss
+++ b/app/javascript/styles/_brand.scss
@@ -35,7 +35,7 @@
   margin-top: 66px;
   margin-left: 35px;
   img {
-  	max-height: 100px;
+    max-height: 100px;
   }
 }
 
@@ -205,14 +205,18 @@
   z-index: -1000;
 
 
-.branding-group-list {
-	.branding-group-logo {
-		width: 180px;
-		img {
-			max-width: 180px;
-		}
-	}
-	.branding-group-name {
-		text-align: left;
-	}
+.collections-list li {
+  display: flex;
+  padding: 1em 0em 1em 0em;
+  border-bottom: 1px solid #ccc;
+  .collections-logo {
+    width: 180px;
+    img {
+      max-width: 180px;
+    }
+  }
+  .collections-name {
+    text-align: left;
+    padding-left: 2em;
+  }
 }
