--- a/app/views/branding_groups/list_navigate.html.erb
+++ b/app/views/branding_groups/list_navigate.html.erb
@@ -1,18 +1,8 @@
-<h2>Collections</h2>
+<h2 class="text-center">Collections</h2>
 
 <div class="row">
   <div class="col-md-12">
     <ul class="collections-list">
-      <li>
-        <div class="collections-logo">
-          <%= link_to image_tag('covid19-button.png'), site_path('covid19') %>
-        </div>
-        <div class="collections-name">
-          <%= link_to 'COVID-19 Studies', site_path('single_cell/covid19') %><br/>
-          Studies relevant to COVID-19<br/>
-          <%= PresetSearch.find_by(name: 'covid19').try(:accession_list).try(:count) %> studies
-        </div>
-      </li>
       <% @branding_groups.each do |branding_group| %>
         <li id="<%= branding_group.name_as_id %>">
           <div class="collections-logo">
@@ -38,6 +28,16 @@
           </div>
         </li>
       <% end %>
+      <li>
+        <div class="collections-logo">
+          <%= link_to image_tag('covid19-logo.png'), '/single_cell/covid19' %>
+        </div>
+        <div class="collections-name">
+          <%= link_to 'COVID-19 Studies', '/single_cell/covid19' %><br/>
+          These are studies which have been identified by the study owners as relevant to COVID-19.<br/>
+          <%= PresetSearch.find_by(name: 'covid19').try(:accession_list).try(:count) %> studies
+        </div>
+      </li>
     </ul>
   </div>
 </div>
